--- a/demo.html
+++ b/demo.html
@@ -86,7 +86,7 @@
           type : 'GET',
           dataType : 'json',
           async: false,
-          url: '/demo.json',
+          url: 'demo.json',
           success : function(data) {
               console.log(data); 
               var topics = [];
