--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       }
 
       function generateList(){
-        var linkBase = "/demo.html?id=";
+        var linkBase = "/ytEdit/demo.html?id=";
         var content = "<table>"
         content += "<tr><th>Video ID</th><th>Video Link</th></tr>";
         
